# kinesis-publish

./: Cargo.toml  README.md
.github/workflows/: build_cargo.yml
src/: main.rs
