[package]
name = "kinesis-publish"
version = "0.1.0"
authors = ["Mark Jackson <markjackson8034@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_kinesis = "0.45.0"
bytes = "0.5.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["full"] }
clap = "2.33.3"
